--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -1,3 +1,18 @@
+<h2>Log in</h2>
+
+{% if form.errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for field in form %}
+        {% for error in field.errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
+
 <form method="post">
     {% csrf_token %}
     <div class="form-group">
