--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -1,33 +1,49 @@
-<h2>Log in</h2>
+{% load static tailwind_tags %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% if form.errors %}
-<div class="alert alert-danger">
-    <ul>
-        {% for field in form %}
-        {% for error in field.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-        {% endfor %}
-    </ul>
-</div>
-{% endif %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Log In - Flowlance</title>
+    {% tailwind_css %}
+</head>
 
+<body>
 
-<form method="post">
-    {% csrf_token %}
-    <div class="form-group">
-        {{ form.username.label_tag }}
-        {{ form.username }}
+    <h2 class="text-black">Log in</h2>
+
+    {% if form.errors %}
+    <div class="alert alert-danger">
+        <ul>
+            {% for field in form %}
+            {% for error in field.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+            {% endfor %}
+        </ul>
     </div>
-    <div class="form-group">
-        {{ form.password.label_tag }}
-        {{ form.password }}
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+    {% endif %}
 
-{% if form.non_field_errors %}
-<div class="alert alert-danger">
-    {{ form.non_field_errors }}
-</div>
-{% endif %}
+
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.username.label_tag }}
+            {{ form.username }}
+        </div>
+        <div class="form-group">
+            {{ form.password.label_tag }}
+            {{ form.password }}
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+
+    {% if form.non_field_errors %}
+    <div class="alert alert-danger">
+        {{ form.non_field_errors }}
+    </div>
+    {% endif %}
+</body>
+
+</html>
