--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -1,19 +1,25 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    <title>Django Tailwind</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		{% tailwind_css %}
-	</head>
 
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
-		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-			</section>
-		</div>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{% block title %}My App{% endblock %}</title>
+	{% tailwind_css %}
+</head>
+
+<body class="bg-bg_white">
+
+	<!-- Header or navbar can go here -->
+
+	<div class="container mx-auto p-4">
+		{% block content %}
+		{% endblock %}
+	</div>
+
+	<!-- Footer can go here -->
+
+</body>
+
 </html>
