--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -3,12 +3,13 @@
 {% block title %}Log In - Flowlance{% endblock %}
 
 {% block content %}
-<div class="flex justify-center items-center w-full h-screen ">
-    <div class="p-10 rounded-lg shadow-lg max-w-md w-full text-center">
+<div class="flex w-full justify-center items-center h-screen flex-col">
+    <!-- Login Box -->
+    <div class="rounded-lg shadow-md text-center w-[585px]  p-10">
 
         <!-- Logo -->
-        <div class="mb-6">
-            <img src="" alt="Logo" class="mx-auto">
+        <div class="justify-center items-center flex mb-4">
+            <i> {% include 'icon/flowlance.html' with w='65' h='65' %} </i>
         </div>
 
         <!-- Título -->
@@ -29,34 +30,50 @@
 
         <form method="post">
             {% csrf_token %}
-            <div class="form-group mb-4">
+            <div class="text-left">
 
-                <label for="">
-                    {{ form.username.label_tag }}
-                </label>
+                <div class="form-group mb-4">
+                    <div class="mb-2 text-primary_black">
+                        {{ form.username.label_tag }}
+                    </div>
                     {{ form.username }}
-            </div>
-            <div class="form-group mb-6">
-                <label for="">
-                    {{ form.password.label_tag }}
-                </label>
+                </div>
+                <div class="form-group mb-6">
+                    <div class="mb-2 text-primary_black">
+                        {{ form.password.label_tag }}
+                    </div>
                     {{ form.password }}
-
+                </div>
             </div>
-            <button type="submit" class="bg-blue-500 text-white w-full py-2 rounded-lg mb-4">Ingresar</button>
+            <button type="submit" class="bg-primary_medium text-white w-full py-2 rounded-md mb-4">Ingresar</button>
         </form>
+
+        <!-- Divider with Circle -->
+        <div class="flex items-center space-x-4 my-4">
+            <div class="flex-1 border-t border-gray-300"></div>
+            <div class="w-3 h-3 border border-primary_black rounded-full flex items-center justify-center">
+                <div class="w-1 h-1 bg-primary_lightest rounded-full"></div>
+            </div>
+            <div class="flex-1 border-t border-gray-300"></div>
+        </div>
 
         <!-- Botón de Google -->
         <button
-            class="flex items-center justify-center bg-white text-black w-full py-2 border border-gray-300 rounded-lg mb-4">
-            <img src="" alt="Google Icon" class="w-5 h-5 mr-2">
-            Continuar con Google
+            class="flex items-center justify-center bg-white text-black w-full py-2 border rounded-md mb-4 border-primary_medium">
+            <span class="text-primary_black flex gap-4 justify-center text-center items-center">
+                <i> {% include 'icon/google_icon.html' with w='32' h='32' %} </i> Continuar con Google
+            </span>
         </button>
 
         <!-- Enlaces adicionales -->
-        <a href="#" class="text-blue-500 hover:underline mb-4 block">¿Olvidaste tu contraseña?</a>
-        <div class="border-t border-gray-300 my-4"></div>
-        <p>¿No tienes cuenta? <a href="#" class="text-blue-500 hover:underline">Regístrate</a></p>
+        <a href="#" class="text-primary_black hover:underline mb-4 block font-bold">¿Olvidaste tu contraseña?</a>
+    </div>
+
+    <!-- Registration Link -->
+    <div class="rounded-lg shadow-md text-center mt-4 w-[585px] p-2">
+        <p class="text-black">¿No tienes cuenta? <a href="#"
+                class="text-primary_black hover:underline font-bold">Regístrate</a></p>
     </div>
 </div>
 {% endblock %}
+% endblock %}
