Landing Page Perfect

--- a/src/templates/homepage/bottom_bar.html
+++ b/src/templates/homepage/bottom_bar.html
@@ -18,7 +18,7 @@
         /* Estilos para los enlaces */
         .footer-links a {
             margin-right: 15px; /* Espacio entre los enlaces */
-            color: #3D46F2;
+            color: #121670;
             text-decoration: none; /* Sin subrayado */
         }
 
@@ -30,7 +30,7 @@
         .language-select select {
             border: none;
             background-color: #F9F9F9;
-            color: #3D46F2;
+            color: #121670;
         }
     </style>
 </head>
