--- a/src/templates/dashboard/building.html
+++ b/src/templates/dashboard/building.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "navigation/navigation.html" %}
 
 
-{% block content %}
+
+{% block app_content %}
 
 <div class="flex flex-row gap-2 w-screen justify-between ">
     <div class="bg-purple-500">
-        {% include 'dashboard/navbar.html' %}
     </div>
     <div class="flex flex-col m-auto items-center justify-center w-full h-full">
         <h1 class="font-bold">Pagina en construcción</h1>
