--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div>
-    <div>
-        <!-- Aqui va el content -->
-        {% block app_content %}
-        {% endblock %}
+<div class="flex">
+    <div class="flex w-full">
+        {% include "navigation/navbar.html" %}
+        <div class="bg-bg_white m-5 w-full">
+            <!-- Aqui va el content -->
+            {% block app_content %}
+            {% endblock %}
+        </div>
     </div>
 
-    <div>
-        {% include "navigation/navbar.html" %}
-    </div>
+
 
     <div>
         <!-- Aqui va la searchbar -->
