feat: Separated the templates of the projects

--- a/src/templates/navigation/navbar.html
+++ b/src/templates/navigation/navbar.html
@@ -1,4 +1,4 @@
-<nav class="flex flex-col h-screen p-4 space-y-4 w-64 bg-white shadow-lg">
+<nav class="flex flex-col h-screen p-4 space-y-4 w-full bg-white shadow-lg">
   <!-- Logo -->
   <div class="text-2xl font-bold mb-8">
     <a href="{% url 'home' %}" class="text-[#6C4EF4] flex items-center space-x-2">
