--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -3,7 +3,9 @@
 {% block content %}
 <div class="flex">
     <div class="flex w-full">
-        {% include "navigation/navbar.html" %}
+        <div class="w-1/4">
+            {% include "navigation/navbar.html" %}
+        </div>
         <div class="bg-bg_white m-5 w-full">
             <!-- Aqui va el content -->
             {% block app_content %}
@@ -11,11 +13,6 @@
         </div>
     </div>
 
-
-
-    <div>
-        <!-- Aqui va la searchbar -->
-    </div>
 </div>
 
 {% endblock %}
