--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div>
+<div class="flex flex-row gap-8">
     <div>
+        {% include "navigation/navbar.html" %}
+    </div>
+    <div class="flex flex-col gap-5 w-full">
         <!-- Aqui va el content -->
         {% block app_content %}
         {% endblock %}
     </div>
 
-    <div>
-        {% include "navigation/navbar.html" %}
-    </div>
 
     <div>
         <!-- Aqui va la searchbar -->
