--- a/src/templates/utils/anchor_button.html
+++ b/src/templates/utils/anchor_button.html
@@ -1,4 +1,5 @@
-<a href="{{url|default:'#' }}" class="py-2 px-4 rounded
-    {% if type == 1 %} bg-[#636AF2] text-bg_white {% endif %}">
+<a href="{{url|default:'#' }}" class="py-2 px-4 rounded-xl text-bg_white
+    {% if type == 1 %} bg-[#636AF2] hover:bg-primary_dark {% endif %}
+    {% if type == 2 %} bg-primary_light {% endif %}">
     {{label|default:'Button'}}
 </a>
