--- a/src/templates/freelancer_profile_creation/upload_curriculum.html
+++ b/src/templates/freelancer_profile_creation/upload_curriculum.html
@@ -26,7 +26,7 @@
                         <div class="flex text-sm text-gray-600 justify-center">
                             <label for="curriculum" class="relative cursor-pointer bg-white rounded-md font-medium text-primary_medium hover:text-primary_dark focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary_medium">
                                 <span>Arrastra tu archivo aquí</span>
-                                <input id="curriculum" name="curriculum" type="file" class="sr-only" accept="application/pdf">
+                                <input id="curriculum" name="curriculum" type="file" class="sr-only" accept="application/pdf" required>
                             </label>
                         </div>
                         <p class="text-xs text-gray-500">Aquí puedes adjuntar tu currículum en formato PDF.</p>
