--- a/src/templates/freelancer_profile_creation/create_project_portfolio.html
+++ b/src/templates/freelancer_profile_creation/create_project_portfolio.html
@@ -14,35 +14,35 @@
             {% csrf_token %}
 
             <div>
-                <label class="block text-primary_black font-medium" for="nombre_proyecto">Ingresa el nombre del proyecto</label>
-                <input type="text" name="nombre_proyecto" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="nombre del proyecto" required>
+                <label class="block text-primary_black font-medium" for="project_name">Ingresa el nombre del proyecto</label>
+                <input type="text" name="project_name" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="nombre del proyecto" required>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="cliente">Ingresa el nombre del cliente</label>
-                <input type="text" name="cliente" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="nombre del cliente">
+                <label class="block text-primary_black font-medium" for="client">Ingresa el nombre del cliente</label>
+                <input type="text" name="client" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="nombre del cliente">
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="descripcion_proyecto">Ingresa una descripción del proyecto</label>
-                <textarea name="descripcion_proyecto" rows="4" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="descripción del proyecto" required></textarea>
+                <label class="block text-primary_black font-medium" for="project_description">Ingresa una descripción del proyecto</label>
+                <textarea name="project_description" rows="4" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="descripción del proyecto" required></textarea>
             </div>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                 <div>
-                    <label class="block text-primary_black font-medium" for="fecha_inicio">Fecha de inicio</label>
-                    <input type="date" name="fecha_inicio" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" required>
+                    <label class="block text-primary_black font-medium" for="start_date">Fecha de inicio</label>
+                    <input type="date" name="start_date" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" required>
                 </div>
 
                 <div>
-                    <label class="block text-primary_black font-medium" for="fecha_fin">Fecha de fin</label>
-                    <input type="date" name="fecha_fin" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium">
+                    <label class="block text-primary_black font-medium" for="end_date">Fecha de fin</label>
+                    <input type="date" name="end_date" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium">
                 </div>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="actividades_realizadas">Actividades realizadas</label>
-                <select name="actividades_realizadas" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium">
+                <label class="block text-primary_black font-medium" for="activities_done">Actividades realizadas</label>
+                <select name="activities_done" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium">
                     <option value="">Selecciona</option>
                     <option value="Desarrollo Web">Desarrollo Web</option>
                     <option value="Diseño Gráfico">Diseño Gráfico</option>
@@ -51,21 +51,21 @@
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="enlace_proyecto">Enlace del proyecto</label>
-                <input type="url" name="enlace_proyecto" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="Enlace">
+                <label class="block text-primary_black font-medium" for="external_link">Enlace del proyecto</label>
+                <input type="url" name="external_link" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="Enlace">
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium">Archivos del proyecto</label>
+                <label class="block text-primary_black font-medium" for="attached_files">Archivos del proyecto</label>
                 <div class="mt-1 flex justify-center items-center px-6 pt-5 pb-6 border-2 border-dashed rounded-md h-48">
                     <div class="space-y-1 text-center">
                         <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
                             <path d="M8 19v11a2 2 0 002 2h28a2 2 0 002-2V19M16 7h16v6a2 2 0 01-2 2H18a2 2 0 01-2-2V7z" />
                         </svg>
                         <div class="flex text-sm text-gray-600 justify-center">
-                            <label for="archivos_adjuntos" class="relative cursor-pointer bg-white rounded-md font-medium text-primary_medium hover:text-primary_dark focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary_medium">
+                            <label for="attached_files" class="relative cursor-pointer bg-white rounded-md font-medium text-primary_medium hover:text-primary_dark focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary_medium">
                                 <span>Arrastra tu archivo aquí</span>
-                                <input id="archivos_adjuntos" name="archivos_adjuntos" type="file" class="sr-only">
+                                <input id="attached_files" name="attached_files" type="file" class="sr-only">
                             </label>
                         </div>
                         <p class="text-xs text-gray-500">Aquí puedes adjuntar archivos relacionados con tus proyectos (imágenes, documentos, etc.).</p>
