--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -8,12 +8,13 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!-- Logo -->
 	<link rel="icon" href="{% static 'img/logo.svg' %}" type="image/svg+xml">
+	<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 	
 	<title>{% block title %}Flowlance{% endblock %}</title>
 	{% tailwind_css %}
 </head>
 
-<body class="bg-bg_white flex flex-col p-0 m-0">
+<body class="bg-bg_white flex flex-col p-0 m-0 font-plus_jakarta_sans">
 
 	<!-- Header or navbar can go here -->
 	<div class= "flex flex-col justify-start w-screen">
@@ -26,3 +27,9 @@
 </body>
 
 </html>
+
+<style>
+	html {
+		font-family: 'Plus Jakarta Sans', sans-serif;	
+	}
+</style>
