--- a/src/templates/dashboard/building.html
+++ b/src/templates/dashboard/building.html
@@ -4,7 +4,7 @@
 
 {% block app_content %}
 
-<div class="flex flex-row gap-2 w-screen justify-between ">
+<div class="flex flex-row gap-2 w-full justify-between ">
     <div class="bg-purple-500">
     </div>
     <div class="flex flex-col m-auto items-center justify-center w-full h-full">
