feat: Imported the calendar from FullCalendar

--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="flex flex-row gap-8">
+<div class="flex flex-row">
     <div>
         {% include "navigation/navbar.html" %}
     </div>
