--- a/src/templates/projects/calendar.html
+++ b/src/templates/projects/calendar.html
@@ -1,7 +1,40 @@
-
 {% extends "projects/default_project_view.html" %}
 
 {% block section %}
+<div id="calendar"></div>
+<!-- Contenedor del calendario -->
 
+<!-- Incluir FullCalendar desde un CDN -->
+<link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.js"></script>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var calendarEl = document.getElementById('calendar');
+
+        // Inicializar el calendario
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+            initialView: 'dayGridMonth', // Vista inicial del calendario
+            headerToolbar: {
+                left: 'prev,next today',
+                center: 'title',
+                right: 'dayGridMonth,timeGridWeek,timeGridDay'
+            },
+            events: [
+                {
+                    title: 'Evento 1',
+                    start: '2024-09-15',
+                    end: '2024-09-16'
+                },
+                {
+                    title: 'Evento 2',
+                    start: '2024-09-20'
+                }
+            ]
+        });
+
+        // Renderizar el calendario
+        calendar.render();
+    });
+</script>
 {% endblock %}
