feat: Added the firs iteration of the timeline

--- a/src/templates/projects/calendar.html
+++ b/src/templates/projects/calendar.html
@@ -9,8 +9,8 @@
 
 <!-- Incluir FullCalendar desde un CDN -->
 <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.css" rel="stylesheet">
-<link href="{% static 'css/calendar_css.css' %}" rel="stylesheet">
+<link href="{% static 'css/project/calendar_css.css' %}" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.js"></script>
 
-<script src="{% static 'js/calendar.js' %}"></script>
+<script src="{% static 'js/project/calendar.js' %}"></script>
 {% endblock %}
