--- a/src/templates/projects/milestones.html
+++ b/src/templates/projects/milestones.html
@@ -4,11 +4,10 @@
 
 <div>
 
-
     <!-- Hitos Section -->
     <div class="flex justify-between items-center">
         <h2 class="text-2xl font-bold text-primary_black">Hitos</h2>
-        <button class="bg-primary_medium text-white px-4 py-2 rounded-lg">Añadir</button>
+        <button id="addMilestoneButton" class="bg-primary_medium text-white px-4 py-2 rounded-lg">Añadir</button>
     </div>
 
     <div class="grid grid-cols-3 gap-6 mt-4">
@@ -25,6 +24,50 @@
         {% endfor %}
     </div>
 
+    <!-- Modal -->
+    <div id="milestoneModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex  justify-center items-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg">
+            <h3 class="text-lg font-semibold text-primary_black">Añadir Hito</h3>
+            <form method="post" action="{% url 'add_milestone' project.id %}">
+                {% csrf_token %}
+                <div class="mt-4">
+                    <label for="name" class="block text-sm font-medium text-gray-700">Nombre</label>
+                    <input id="name" name="name" type="text"
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
+                        required>
+                </div>
+                <div class="mt-4">
+                    <label for="description" class="block text-sm font-medium text-gray-700">Descripción</label>
+                    <textarea id="description" name="description" rows="3"
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
+                        required></textarea>
+                </div>
+                <div class="mt-4">
+                    <label for="end_date" class="block text-sm font-medium text-gray-700">Descripción</label>
+                    <input name="end_date" type="date" id="end_date"
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
+                        required>
+                </div>
+                <div class="mt-4 flex justify-end">
+                    <button type="button" id="closeModal"
+                        class="bg-gray-300 text-gray-800 px-4 py-2 rounded-lg mr-2">Cancelar</button>
+                    <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg">Guardar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
 </div>
+
+<!-- Include JavaScript at the end of your template -->
+<script>
+    document.getElementById('addMilestoneButton').addEventListener('click', function () {
+        document.getElementById('milestoneModal').classList.remove('hidden');
+    });
+
+    document.getElementById('closeModal').addEventListener('click', function () {
+        document.getElementById('milestoneModal').classList.add('hidden');
+    });
+</script>
 
 {% endblock %}
