Refactor: Refactor code to add signals for creating and saving freelancer profiles

--- a/src/templates/freelancer_profile_creation/freelancer_profile.html
+++ b/src/templates/freelancer_profile_creation/freelancer_profile.html
@@ -5,9 +5,9 @@
 
     <div class="max-w-7xl mx-auto mb-6 ml-24">
         <h1 class="text-3xl font-bold text-primary_black text-left">Perfil del Freelancer</h1>
-        <h2 class="text-lg font-semibold text-primary_dark text-left">{{ freelancer.username }}</h2> 
+        <h2 class="text-lg font-semibold text-primary_dark text-left">{{ profile.user.username }}</h2> 
         <p class="text-primary_black font-light mt-4 font-sans">
-            Correo: {{ freelancer.email }}
+            Correo: {{ profile.user.email }}
         </p>
     </div>
 
