feat: changed css and merged with upstream

--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -1,7 +1,7 @@
 {% extends "navigation/navigation.html" %}
 
 {% block app_content %}
-<div class="container px-10 py-4">
+<div class="container">
     <!-- Navigation Tabs -->
     <div class="flex items-center justify-center gap-5 bg-primary_lightest rounded-xl px-20 py-2 text-white">
         <a href="/project/{{project.id}}/milestone"
