--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -3,8 +3,10 @@
 {% block content %}
 
 <div class="flex flex-row">
-    {% include "navigation/navbar.html" %}
-    <div class="w-full px-6 py-2">
+    <div class="w-[20%]">
+        {% include "navigation/navbar.html" %}
+    </div>
+    <div class="w-full px-9 py-2">
         <div class="flex flex-col gap-5">
             {% include "navigation/top_bar_controls.html" %}
             <!-- Aqui va el content -->
